# Modular-Cpp-library

./: .travis.yml  CMakeLists.txt  README.md  index.html
app/: CMakeLists.txt  fooapp.cpp
foo/: CMakeLists.txt  FooConfig.cmake.in  foo.cpp
foo/core/: CMakeLists.txt
foo/core/include/: FooExport.hpp
foo/core/include/foo/: CoreClass.hpp
foo/core/src/: CoreClass.cpp
foo/core/test/: CMakeLists.txt  test_CoreClass.cpp
foo/extension/src/: ExtensionClass.cpp
foo/extension/test/: CMakeLists.txt
fooapp/: CMakeLists.txt
foolib/: CMakeLists.txt  foo.cpp
foolib/core/include/: FooExport.hpp
foolib/core/test/: CMakeLists.txt
foolib/extension/: CMakeLists.txt
foolib/extension/include/foo/: ExtensionClass.hpp
foolib/extension/test/: CMakeLists.txt  test_ExtensionClass.cpp
